k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gpxbase-frontend
spec:
  selector:
    app: gpxbase-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
